--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <p class="about-us__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, quidem. Cupiditate, rerum minima nesciunt modi odio nostrum nam accusamus doloribus consequuntur eius fuga voluptatem repellat quod inventore porro aliquid corrupti voluptas accusantium laboriosam sequi tempora deleniti repudiandae veritatis nisi. Dignissimos modi maiores adipisci repellendus nostrum suscipit veniam asperiores temporibus voluptas. Consequuntur repudiandae debitis modi aspernatur, velit voluptates dolorem tempora. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, dolor?</p>
                         </div>
                         <a href="img/wallpaperas.jpg" target="blank" class="about-us__img">
-                            <img src="img/wallpaperas.jpg" alt="articulo acerca de la ley orgánica para la protección del niño armor system" class="img__copy">
+                            <img src="img/wallpaperas.jpg" alt="articulo acerca de la ley orgánica para la protección del niño armor system" class="img__copy" loading="lazy">
                         </a>
                     </div>
                     <div class="about-us__cont--reverse animate__animated animate__fadeInRight">
@@ -103,7 +103,7 @@
                                 <div class="bar1"></div>
                                 <div class="bar2"></div>
                             </div>
-                            <p class="about-us__copy">Estamos ubicados en el C.C. La Casona 2, Planta Baja, Local nose.</p>
+                            <p class="about-us__copy">Estamos ubicados en el C.C. La Casona 2, Planta Baja, Local PB04.</p>
                         </div>
                     </div>
                 </div>
