--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content= "Sitio web del local Armor System ubicado en el Centro Comercial La Casona 2" />
+    <meta name="description" content= "Sitio web del centro de copiado Armor System ubicado en el Centro Comercial La Casona 2" />
     <link rel="shortcut icon" href="img/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>Armor System</title>
 </head>
@@ -30,10 +29,10 @@
                     </div>
                 </nav>
                 <div class="hero__main">
-                    <div class="text-container animate__animated animate__fadeIn animate__slow">
+                    <div class="text-container">
                         <h1 class="text-container__main">Armor System</h1>
-                        <p class="text-container__info">Estamos ubicados en el C.C. La casona</p>
-                        <a href="#contacto" class="btn">Contactanos</a>
+                        <p class="text-container__info">Centro de copiado ubicado en el C.C. La casona</p>
+                        <a href="#contacto" class="main-btn">Contactanos</a>
                     </div>
                 </div>
             </div>
@@ -75,14 +74,16 @@
         <section id="precios">
             <div class="container">
                 <h2 class="title">Lista de precios</h2>
+                <div class="btn-container">
 
+                </div>
             </div>
         </section>
         <section id="sobreNosotros">
             <div class="container">
                 <h2 class="title">Sobre Nosotros</h2>
                 <div class="about-us">
-                    <div class="about-us__cont animate__animated animate__fadeInLeft">
+                    <div class="about-us__cont">
                         <div class="about-us__text">
                             <h3 class="about-us__main">Armor Systems</h3>
                             <div class="bars">
@@ -95,7 +96,7 @@
                             <img src="img/wallpaperas.jpg" alt="articulo acerca de la ley orgánica para la protección del niño armor system" class="img__copy" loading="lazy">
                         </a>
                     </div>
-                    <div class="about-us__cont--reverse animate__animated animate__fadeInRight">
+                    <div class="about-us__cont--reverse">
                         <iframe class="about-us__img" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15698.59005590848!2d-66.9834763!3d10.3700429!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb59882def4cf2fa0!2sLa%20Casona!5e0!3m2!1ses!2sve!4v1630700789367!5m2!1ses!2sve" style="border:0;" allowfullscreen="" height="400px" loading="lazy"></iframe>
                         <div class="about-us__text">
                             <h3 class="about-us__main">Encuentranos...</h3>
@@ -103,7 +104,7 @@
                                 <div class="bar1"></div>
                                 <div class="bar2"></div>
                             </div>
-                            <p class="about-us__copy">Estamos ubicados en el C.C. La Casona 2, Planta Baja, Local PB04.</p>
+                            <p class="about-us__copy">Estamos ubicados en el C.C. La Casona 2, Nivel Planta Baja, Local 04.</p>
                         </div>
                     </div>
                 </div>
@@ -191,5 +192,6 @@
             </div>
         </div>
     </footer>
+    <script src="app.js"></script>
 </body>
 </html>
