--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="img/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <title>Armor System</title>
+    <title>Centro de Copiado Armor Systems</title>
 </head>
 <body>
     <header id="inicio">
@@ -30,7 +30,7 @@
                 </nav>
                 <div class="hero__main">
                     <div class="text-container">
-                        <h1 class="text-container__main">Armor System</h1>
+                        <h1 class="text-container__main">Armor Systems</h1>
                         <p class="text-container__info">Centro de copiado ubicado en el C.C. La casona</p>
                         <a href="#contacto" class="main-btn">Contactanos</a>
                     </div>
@@ -90,7 +90,7 @@
                                 <div class="bar1"></div>
                                 <div class="bar2"></div>
                             </div>
-                            <p class="about-us__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, quidem. Cupiditate, rerum minima nesciunt modi odio nostrum nam accusamus doloribus consequuntur eius fuga voluptatem repellat quod inventore porro aliquid corrupti voluptas accusantium laboriosam sequi tempora deleniti repudiandae veritatis nisi. Dignissimos modi maiores adipisci repellendus nostrum suscipit veniam asperiores temporibus voluptas. Consequuntur repudiandae debitis modi aspernatur, velit voluptates dolorem tempora. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, dolor?</p>
+                            <p class="about-us__copy">Somos un centro de copiado que ofrece servicios de ciber y venta de todo tipo de artículos de papelería, juguetes, impresiones, ploteos, venta de cartuchos de impresora y toners.</p>
                         </div>
                         <a href="img/wallpaperas.jpg" target="blank" class="about-us__img">
                             <img src="img/wallpaperas.jpg" alt="articulo acerca de la ley orgánica para la protección del niño armor system" class="img__copy" loading="lazy">
@@ -126,7 +126,7 @@
                         </div>
                         <div class="copy">
                             <h3 class="copy__main">Tlf:</h3>
-                            <p class="copy__info">0424-5555555</p>
+                            <p class="copy__info">0414-2282565</p>
                         </div>
                         <div class="copy">
                             <h3 class="copy__main">Ubicación:</h3>
@@ -159,8 +159,8 @@
                             <div class="foot__bar2"></div>
                         </div>
                         <div class="hours">
-                            <p class="foot__copy">Lunes a viernes: 8am - 5:30pm</p>
-                            <p class="foot__copy">Sábados: 9am - 5:30pm</p>
+                            <p class="foot__copy">Lunes a viernes: 8:00am - 5:30pm</p>
+                            <p class="foot__copy">Sábados: 10:00am - 5:30pm</p>
                         </div>
                     </div>
                     <div class="foot__part2">
@@ -174,7 +174,7 @@
                             <a href="#" class="link">
                                 <i class="fab fa-facebook-square"></i>
                             </a>
-                            <a href="#" class="link">
+                            <a href="https://www.instagram.com/centro_as/" target="_blank" class="link">
                                 <i class="fab fa-instagram"></i>
                             </a>
                             <a href="#" class="link">
