--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="img/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <title>Centro de Copiado Armor Systems</title>
+    <title>Armor Systems</title>
 </head>
 <body>
     <header id="inicio">
@@ -25,6 +25,7 @@
                             <div class="vertical__bar"></div>
                             <li><a href="#contacto">Contacto</a></li>
                             <div class="vertical__bar"></div>
+                            <li><a href="#galeria">Galería</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -135,6 +136,85 @@
                     </div>
                     <div class="contact__hero">
                         <img class="contact__img" src="img/newmessage_monochromatic.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="galeria">
+            <div class="container">
+                <h2 class="title">Galería</h2>
+                <div class="gallery">
+                    <div class="gallery__img">
+                        <img src="img/product (1).jpg" alt="">
+                        <div class="img__hover">
+                            <a href="https://www.instagram.com/p/CS-Xh1-pasm/" target="_blank">
+                                <i class="fab fa-instagram" class="gallery__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="gallery__img">
+                        <img src="img/product (2).jpg" alt="">
+                        <div class="img__hover">
+                            <a href="https://www.instagram.com/p/CC6Y0AGpk9s/" target="_blank">
+                                <i class="fab fa-instagram" class="gallery__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="gallery__img">
+                        <img src="img/product (3).jpg" alt="">
+                        <div class="img__hover">
+                            <a href="https://www.instagram.com/p/CDkOepKJdwZ/" target="_blank">
+                                <i class="fab fa-instagram" class="gallery__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="gallery__img">
+                        <img src="img/product (4).jpg" alt="">
+                        <div class="img__hover">
+                            <a href="https://www.instagram.com/p/CDxLgjlpsK_/" target="_blank">
+                                <i class="fab fa-instagram" class="gallery__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="gallery__img">
+                        <img src="img/product (5).jpg" alt="">
+                        <div class="img__hover">
+                            <a href="https://www.instagram.com/p/CESbWjepQUH/" target="_blank">
+                                <i class="fab fa-instagram" class="gallery__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="gallery__img">
+                        <img src="img/product (6).jpg" alt="">
+                        <div class="img__hover">
+                            <a href="https://www.instagram.com/p/CEpsJzQp7rM/" target="_blank">
+                                <i class="fab fa-instagram" class="gallery__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="gallery__img">
+                        <img src="img/product (7).jpg" alt="">
+                        <div class="img__hover">
+                            <a href="https://www.instagram.com/p/CGF0VJUpBc8/" target="_blank">
+                                <i class="fab fa-instagram" class="gallery__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="gallery__img">
+                        <img src="img/product (8).jpg" alt="">
+                        <div class="img__hover">
+                            <a href="https://www.instagram.com/p/CG0y3CtpWFH/" target="_blank">
+                                <i class="fab fa-instagram" class="gallery__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="gallery__img">
+                        <img src="img/product (9).jpg" alt="">
+                        <div class="img__hover">
+                            <a href="https://www.instagram.com/p/CH86zCXJbNo/" target="_blank">
+                                <i class="fab fa-instagram" class="gallery__icon"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
