--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
                             <li><a href="#sobreNosotros">Sobre Nosotros</a></li>
                             <div class="vertical__bar"></div>
                             <li><a href="#contacto">Contacto</a></li>
-                            <div class="vertical__bar"></div>
-                            <li><a href="#galeria">Galería</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -50,7 +48,7 @@
                         <div class="service__text">
                             <h3 class="service__title">Impresiones</h3>
                             <p class="service__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo expedita explicabo autem distinctio ratione. Assumenda eveniet molestias cum ad iure!</p>
-                            <a href="#" class="service__btn">Ver precios</a>
+                            <!-- <a href="#" class="service__btn">Ver precios</a> -->
                         </div>
                     </div>
                     <div class="service">
@@ -58,7 +56,7 @@
                         <div class="service__text">
                             <h3 class="service__title">Fotocopias</h3>
                             <p class="service__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo expedita explicabo autem distinctio ratione. Assumenda eveniet molestias cum ad iure!</p>
-                            <a href="#" class="service__btn">Ver precios</a>
+                            <!-- <a href="#" class="service__btn">Ver precios</a> -->
                         </div>
                     </div>
                     <div class="service">
@@ -66,7 +64,7 @@
                         <div class="service__text">
                             <h3 class="service__title">Ciber</h3>
                             <p class="service__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo expedita explicabo autem distinctio ratione. Assumenda eveniet molestias cum ad iure!</p>
-                            <a href="#" class="service__btn">Ver precios</a>
+                            <!-- <a href="#" class="service__btn">Ver precios</a> -->
                         </div>
                     </div>
                 </div>
@@ -75,8 +73,177 @@
         <section id="precios">
             <div class="container">
                 <h2 class="title">Lista de precios</h2>
-                <div class="btn-container">
-
+                <div class="gallery">
+                    <div class="pages page1">
+                        <div class="gallery__img">
+                            <img src="img/product (1).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">22$</p>
+                                <a href="https://www.instagram.com/p/CS-Xh1-pasm/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (2).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">22$</p>
+                                <a href="https://www.instagram.com/p/CC6Y0AGpk9s/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (3).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">22$</p>
+                                <a href="https://www.instagram.com/p/CDkOepKJdwZ/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (4).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">22$</p>
+                                <a href="https://www.instagram.com/p/CDxLgjlpsK_/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (5).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">22$</p>
+                                <a href="https://www.instagram.com/p/CESbWjepQUH/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (6).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">22$</p>
+                                <a href="https://www.instagram.com/p/CEpsJzQp7rM/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (7).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">22$</p>
+                                <a href="https://www.instagram.com/p/CGF0VJUpBc8/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (8).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">22$</p>
+                                <a href="https://www.instagram.com/p/CG0y3CtpWFH/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (9).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">22$</p>
+                                <a href="https://www.instagram.com/p/CH86zCXJbNo/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pages page2">
+                        <div class="gallery__img">
+                            <img src="img/product (10).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">55$</p>
+                                <a href="https://www.instagram.com/p/CS-IN_JJzm_/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (11).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">55$</p>
+                                <a href="https://www.instagram.com/p/CC_UeO2Jsdm/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (12).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">55$</p>
+                                <a href="https://www.instagram.com/p/CDAHnfWpSJw/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (13).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">55$</p>
+                                <a href="https://www.instagram.com/p/CDPZZnYpTyc/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (14).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">55$</p>
+                                <a href="https://www.instagram.com/p/CDUoD_9Jp_a/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (15).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">55$</p>
+                                <a href="https://www.instagram.com/p/CDhl8ZjJIuJ/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (16).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">55$</p>
+                                <a href="https://www.instagram.com/p/CGBXVPbJ-Aq/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (17).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">55$</p>
+                                <a href="https://www.instagram.com/p/CGI5I3-JzOA/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="gallery__img">
+                            <img src="img/product (18).jpg" alt="">
+                            <div class="img__hover">
+                                <p class="price">55$</p>
+                                <a href="https://www.instagram.com/p/CGGb_q1JI8o/" target="_blank">
+                                    <i class="fab fa-instagram" class="gallery__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="gallery__btn">
+                        <a href="#" class="gallery__prev">Anterior</a>
+                        <a href="#" class="gallery__next">Siguiente</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -136,85 +303,6 @@
                     </div>
                     <div class="contact__hero">
                         <img class="contact__img" src="img/newmessage_monochromatic.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="galeria">
-            <div class="container">
-                <h2 class="title">Galería</h2>
-                <div class="gallery">
-                    <div class="gallery__img">
-                        <img src="img/product (1).jpg" alt="">
-                        <div class="img__hover">
-                            <a href="https://www.instagram.com/p/CS-Xh1-pasm/" target="_blank">
-                                <i class="fab fa-instagram" class="gallery__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="gallery__img">
-                        <img src="img/product (2).jpg" alt="">
-                        <div class="img__hover">
-                            <a href="https://www.instagram.com/p/CC6Y0AGpk9s/" target="_blank">
-                                <i class="fab fa-instagram" class="gallery__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="gallery__img">
-                        <img src="img/product (3).jpg" alt="">
-                        <div class="img__hover">
-                            <a href="https://www.instagram.com/p/CDkOepKJdwZ/" target="_blank">
-                                <i class="fab fa-instagram" class="gallery__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="gallery__img">
-                        <img src="img/product (4).jpg" alt="">
-                        <div class="img__hover">
-                            <a href="https://www.instagram.com/p/CDxLgjlpsK_/" target="_blank">
-                                <i class="fab fa-instagram" class="gallery__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="gallery__img">
-                        <img src="img/product (5).jpg" alt="">
-                        <div class="img__hover">
-                            <a href="https://www.instagram.com/p/CESbWjepQUH/" target="_blank">
-                                <i class="fab fa-instagram" class="gallery__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="gallery__img">
-                        <img src="img/product (6).jpg" alt="">
-                        <div class="img__hover">
-                            <a href="https://www.instagram.com/p/CEpsJzQp7rM/" target="_blank">
-                                <i class="fab fa-instagram" class="gallery__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="gallery__img">
-                        <img src="img/product (7).jpg" alt="">
-                        <div class="img__hover">
-                            <a href="https://www.instagram.com/p/CGF0VJUpBc8/" target="_blank">
-                                <i class="fab fa-instagram" class="gallery__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="gallery__img">
-                        <img src="img/product (8).jpg" alt="">
-                        <div class="img__hover">
-                            <a href="https://www.instagram.com/p/CG0y3CtpWFH/" target="_blank">
-                                <i class="fab fa-instagram" class="gallery__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="gallery__img">
-                        <img src="img/product (9).jpg" alt="">
-                        <div class="img__hover">
-                            <a href="https://www.instagram.com/p/CH86zCXJbNo/" target="_blank">
-                                <i class="fab fa-instagram" class="gallery__icon"></i>
-                            </a>
-                        </div>
                     </div>
                 </div>
             </div>
